--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "image_base": "https://eu.hamreus.com/",
     "chunk_size": 512,
     "download_dir": "data",
-    "proxy": "http://user:pass@host:port",
+    "proxy": null,
     "sleep": [200, 500],
     "backoff_factor": 0.3
 }
